# fink

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  THIRDPARTY-NOTICES.md  build.rs
.cargo/: config.toml
.claude/: settings.json
.github/workflows/: app-smoke-test.yml  ci.yml  release.yml
crates/test-macros/: Cargo.toml  README.md
crates/test-macros/src/: lib.rs
crates/wat-linker/: Cargo.toml
crates/wat-linker/src/: lib.rs
docs/: README.md  ast-arena-contract.md  calling-convention-v2.md  cps-ir-design.md  cps-node-unification.md  debugging.md  docs-conventions.md  execution-model.md  fmt-stage2-port-plan.md  grammar.md  history.md  language.md  name-resolution-design.md  roadmap.md  semantics.md  terminology.md  varargs-calling-convention.md
docs/examples/: cps.fnk  lang-features.fnk  macros.fnk  protocols.fnk  type-system.fnk  unresolved.fnk
pkgs/fink/: blocks.fnk  compile.fnk
pkgs/std/: effects.test.fnk  float.fnk  float.test.fnk  fmt.fnk  int.fnk  int.test.fnk  iter.test.fnk  math.test.fnk  num.fnk  num.test.fnk  range.test.fnk  rec.test.fnk  repr.fnk  set.fnk  str.fnk  str.test.fnk  tasks.fnk  tasks.test.fnk  testing.fnk  testing.test.fnk  trace.test.fnk
scripts/: package-release.sh  release-all.sh  targets.txt
src/: README.md  compiler.rs  lib.rs  propgraph.rs  sourcemap.rs  sourcemap_native.rs  test_context.rs  test_support.rs
src/ast/: fmt.rs  mod.rs  test_fmt.fnk
src/compile/: README.md  mod.rs
src/dap/: README.md  mod.rs
src/dap/test_fixtures/: let_write_return.fnk  reads_stdin.fnk
src/errors/: README.md  mod.rs
src/fmt/: README.md  layout.rs  mod.rs  print.rs  test_fmt.fnk  test_print.fnk
src/lexer/: mod.rs  test_lexer.fnk
src/parser/: mod.rs  test_bindings.fnk  test_blocks.fnk  test_functions.fnk  test_grouping.fnk  test_literals.fnk  test_match.fnk  test_operators.fnk  test_parser.fnk  test_spread_ranges.fnk  test_try.fnk  test_yield.fnk
src/passes/: README.md  mod.rs
src/passes/ast/: README.md  all.test.fnk  arena-contract.md  bindings.test.fnk  block_modes.test.fnk  blocks.test.fnk  errors.test.fnk  fmt.rs  fmt.test.fnk  functions.test.fnk  grouping.test.fnk  lexer.rs  literals.test.fnk  match.test.fnk  member_apply.test.fnk  mod.rs  module.test.fnk  operators.test.fnk  parser.rs  range.test.fnk  spread_ranges.test.fnk  test_bindings.fnk  test_block_modes.fnk  test_blocks.fnk  test_errors.fnk  test_fmt.fnk  test_functions.fnk  test_grouping.fnk  test_lexer.fnk  test_literals.fnk  test_match.fnk  test_member_apply.fnk  test_module.fnk  test_operators.fnk  test_parser.fnk  test_range.fnk  test_spread_ranges.fnk  test_try.fnk  test_types.fnk  test_with.fnk  (+4 more)
src/passes/ast_desugar/: mod.rs  partial.test.fnk  pub.test.fnk  test_partial.fnk  test_pub.fnk
src/passes/closure_capture/: mod.rs  test_closure_capture.fnk
src/passes/closure_convert/: mod.rs  test_closure_convert.fnk
src/passes/closure_lifting/: mod.rs  test_closure_lift_resolve.fnk  test_closure_lifting.fnk
src/passes/closures/: cont_lift.rs  convert.rs  cps_closures.test.fnk  cps_hoisted.test.fnk  hoist.rs  mod.rs  test_closures.fnk  test_convert.fnk  test_full.fnk  test_hoist.fnk
src/passes/cont_lifting/: mod.rs  test_cont_lifting.fnk
src/passes/cps/: README.md  cps_application.test.fnk  cps_bindings.test.fnk  cps_collections.test.fnk  cps_functions.test.fnk  cps_letrec.test.fnk  cps_literals.test.fnk  cps_module.test.fnk  cps_operators.test.fnk  cps_patterns_bind.test.fnk  cps_patterns_bindings.test.fnk  cps_patterns_dict.test.fnk  cps_patterns_match.test.fnk  cps_patterns_rec.test.fnk  cps_patterns_seq.test.fnk  cps_patterns_str.test.fnk  cps_range.test.fnk  cps_strings.test.fnk  cps_types.test.fnk  fmt.rs  free_vars.rs  ir-design.md  ir.rs  mod.rs  node-unification.md  test_application.fnk  test_bindings.fnk  test_collections.fnk  test_cps.fnk  test_cps_free_vars.fnk  test_cps_module.fnk  test_cps_patterns.fnk  test_cps_yield.fnk  test_effects.fnk  test_functions.fnk  test_letrec.fnk  test_literals.fnk  test_module.fnk  test_operators.fnk  test_patterns_bind.fnk  (+16 more)
src/passes/cps_flat/: fmt.rs  mod.rs  test_cps_flat.fnk
src/passes/debug_marks/: fmt.rs  mod.rs  (+2 more)
src/runner/: README.md  bless.rs  inspector.rs  ir.rs  mod.rs  test_async.fnk  test_bindings.fnk  test_effects.fnk  test_errors.fnk  test_fn_match.fnk  test_formatting.fnk  test_functions.fnk  test_io.fnk  test_ir.fnk  test_ir_io.fnk  test_ir_link.fnk  test_ir_main.fnk  test_ir_sets.fnk  test_linking.fnk  test_lists.fnk  test_literals.fnk  test_main.fnk  test_math.fnk  test_modules.fnk  test_operators.fnk  test_patterns.fnk  test_ranges.fnk  test_records.fnk  test_runner.fnk  test_sets.fnk  test_strings.fnk  test_tasks.fnk  test_with.fnk  test_yield.fnk  trap.rs  v8_inspector.rs  v8_runner.rs  wasmtime_runner.rs
src/runtime/: README.md  all.test.fnk  apply.wat  channel.wat  decimal.wat  dict.wat  dispatch.wat  float.wat  hamt.wat  hashing.wat  int.wat  interop-rust.wat  libm.wat  list.wat  math.wat  mod.rs  modules.wat  num.wat  opaque.wat  operators.wat  patterns.test.fnk  protocols.wat  range.wat  rec.wat  repr.wat  scheduler.wat  set.wat  start.wat  str.wat  string.wat  symbols.wat  trace.wat  types.test.fnk  types.wat
src/sourcemap/: README.md  mod.rs  native.rs  smv3.rs
src/strings/: README.md  mod.rs
src/transform/: cps.rs  cps_c.rs  cps_fmt.rs  cps_free_vars.rs  cps_pass.rs  cps_transform.rs  mod.rs  partial.rs  test_cps.fnk  test_cps_free_vars.fnk  test_cps_patterns.fnk  test_cps_yield.fnk  test_free_vars.fnk  test_partial.fnk
src/wat_linker/: mod.rs
std/: all.test.fnk  bool.test.fnk  channels.fnk  channels.test.fnk  dict.test.fnk  effects.fnk  effects.test.fnk  float.test.fnk  fmt.test.fnk  fn.test.fnk  int.fnk  int.test.fnk  io.fnk  io.test.fnk  iter.fnk  iter.test.fnk  list.fnk  list.test.fnk  math.fnk  set.test.fnk  str.test.fnk  tasks.fnk  tasks.test.fnk  testing.fnk  trace.fnk  trace.test.fnk
tests/: cli.rs  dump_ids.rs  dump_lift.rs  wasm_codegen.rs
tests/fnk/: add.fnk  literal42.fnk
tests/wat/: add.wat  fib.wat  literal42.wat  print.wat
(+187 files in other folders)
