[workspace]
members = [
  ".",
  "crates/test-macros",
]
resolver = "2"

[package]
name = "fink"
version = "0.0.0" # derived from git tags at publish time
edition = "2024"


[features]
# compile: WASM codegen — collect, emit, DWARF, link, WAT disassembly.
# Safe for wasm32 targets. Gates compiler.rs and wasm passes.
compile = ["dep:wasmprinter"]
# runtime: wasmtime runner only — no compiler. Used by finkrt standalone binary.
runtime = ["dep:wasmtime"]
# run: native execution (wasmtime) + DAP debugger. Implies compile + runtime. Native only.
run = ["compile", "runtime", "dep:wat-crate", "dep:dap", "dep:tokio"]
default = ["compile", "run"]

[dependencies]
gimli = { version = "0.33", default-features = false, features = ["write", "read"] }
wasm-encoder = "0.246"
wasmparser = "0.246"
wasmprinter = { version = "0.246", optional = true }
wat-crate = { package = "wat", version = "1", features = ["dwarf"], optional = true }
wasmtime = { version = "43", features = ["debug"], optional = true }
dap = { version = "0.4.1-alpha1", optional = true }
tokio = { version = "1", features = ["rt"], optional = true }

[[bin]]
name = "finkrt"
path = "src/bin/finkrt.rs"
required-features = ["runtime"]

[build-dependencies]
wat-crate = { package = "wat", version = "1" }

[dev-dependencies]
test-macros = { path = "crates/test-macros" }
pretty_assertions = "1"
tempfile = "3"
