[workspace]
members = [
  ".",
  "crates/test-macros",
]
resolver = "2"

[package]
name = "fink"
version = "0.0.0" # derived from git tags at publish time
edition = "2024"
license = "MIT"
description = "A functional programming language and compiler toolchain targeting WebAssembly"
homepage = "https://fink-lang.org"
repository = "https://github.com/fink-lang/fink"
readme = "README.md"


[features]
# compile: WASM codegen — collect, emit, DWARF, link, WAT disassembly.
# Safe for wasm32 targets. Gates compiler.rs and wasm passes.
compile = ["dep:wasmprinter"]
# runtime: wasmtime runner only — no compiler. Used by finkrt standalone binary.
runtime = ["dep:wasmtime"]
# run: native execution (wasmtime) + DAP debugger. Implies compile + runtime. Native only.
run = ["compile", "runtime", "dep:wat-crate", "dep:dap", "dep:tokio"]
default = ["compile", "run"]

[dependencies]
gimli = { version = "0.33", default-features = false, features = ["write", "read"] }
wasm-encoder = "0.247"
wasmparser = "0.247"
wasmprinter = { version = "0.247", optional = true }
wat-crate = { package = "wat", version = "1", features = ["dwarf"], optional = true }
wasmtime = { version = "44", features = ["debug"], optional = true }
dap = { version = "0.4.1-alpha1", optional = true }
tokio = { version = "1", features = ["rt"], optional = true }

[[bin]]
name = "finkrt"
path = "src/bin/finkrt.rs"
required-features = ["runtime"]

[build-dependencies]
wat-crate = { package = "wat", version = "1" }

[dev-dependencies]
test-macros = { path = "crates/test-macros" }
tempfile = "3"

# Strip symbols from release binaries. Without this, each finkrt ships
# with its full symbol table, inflating the binary by ~20% (measured on
# macOS aarch64: 14 MB → 11 MB; Linux numbers are higher, ~30–40%).
# The homebrew tarball bundles four finkrt binaries — one per tier-1
# target — so the savings multiply across the extracted install.
#
# Tradeoff: `strip = true` removes the symbol table (it maps to
# `strip = "symbols"`; debuginfo is already absent from release builds by
# default). Panics still unwind and still print a backtrace, but frames
# without source info may show raw addresses instead of mangled function
# names. If we ever need richer crash reports from user machines, revisit
# this — options: keep symbols (drop strip), ship a separate debug package,
# or integrate a symbol server.
[profile.release]
strip = true
